# console_password_generator

./: .gitignore  README.md  main.py  pyproject.toml
mvc/: __init__.py
mvc/controllers/: __init__.py  controller_check_pass_strength.py  controller_copy_to_clipboard.py  controller_pass_gen.py  controller_pass_gen_from_phrase.py  controller_shuffle_pass.py  router.py  types.py
mvc/models/: __init__.py  pass_gen_fun.py  pass_utils.py  types.py
mvc/views/: __init__.py  main_menu.py
