[build-system]
requires = ["setuptools==80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "console_password_generator"
version = "1.0.0"
description = "Console application for generating passwords."
requires-python = "~=3.13.0"

dependencies = [
  "pyperclip == 1.9.0",
]

[tool.setuptools]
py-modules = []

[tool.distutils.egg_info]
egg_base = "."
